// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TahtiLogo > (Snapshot) renders the mark only 1`] = `
<span
  class="font-heading text-foreground inline-flex items-center gap-2 text-lg font-medium tracking-[0.25em]"
>
  <span
    aria-hidden="true"
    class="bg-primary text-primary-foreground border-border shadow-shadow flex size-8 shrink-0 items-center justify-center rounded-full border-(length:--border-width)"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star"
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </span>
</span>
`;

exports[`TahtiLogo > (Snapshot) renders the wordmark 1`] = `
<span
  class="font-heading text-foreground inline-flex items-center gap-2 text-lg font-medium tracking-[0.25em]"
>
  <span
    aria-hidden="true"
    class="bg-primary text-primary-foreground border-border shadow-shadow flex size-8 shrink-0 items-center justify-center rounded-full border-(length:--border-width)"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star"
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </span>
  <span
    class="leading-none uppercase"
  >
    TAHTI
  </span>
</span>
`;
